--- a/themes/Clean/less/humhub/panel.less
+++ b/themes/Clean/less/humhub/panel.less
@@ -105,7 +105,7 @@
             background: var(--primary);
 
             &, h1, h2 {
-                text-shadow: none;
+                text-shadow: none !important;
             }
         }
 
